fix: horizontal scroll bar appears on SiderMenu with light navTheme (#3381)
* fix: horizontal scroll bar appears on SiderMenu with light navTheme

* a better solution

--- a/src/components/SiderMenu/index.less
+++ b/src/components/SiderMenu/index.less
@@ -35,9 +35,18 @@
     position: fixed;
     top: 0;
     left: 0;
-    :global(.ant-menu-root) {
-      overflow-y: auto;
-      height: ~'calc(100vh - @{nav-header-height})';
+    :global {
+      .ant-menu-root {
+        overflow-y: auto;
+        height: ~'calc(100vh - @{nav-header-height})';
+      }
+      .ant-menu-inline {
+        border-right: 0;
+        .ant-menu-item,
+        .ant-menu-submenu-title {
+          width: 100%;
+        }
+      }
     }
   }
   &.light {
